force-app/main/default/objects/smartystreets__SmartyStreets_Helper__c/smartystreets__SmartyStreets_Helper__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Address Verification - Scheduled Job Helper fields</description>
    <label>√ Batch Helper</label>
</CustomObject>