force-app/main/default/objects/smartystreets__SmartyStreets_Helper__c/fields/smartystreets__Before_Batch_Addr_Two__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Before_Batch_Addr_Two__c</fullName>
    <label>Before Batch Addr Two</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>