force-app/main/default/objects/smartystreets__SmartyStreets_Helper__c/fields/smartystreets__Confirmed__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Confirmed__c</fullName>
    <label>Confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>