force-app/main/default/objects/smartystreets__SmartyStreets_Helper__c/fields/smartystreets__FailedZipKeys__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__FailedZipKeys__c</fullName>
    <label>FailedZipKeys</label>
    <type>TextArea</type>
</CustomField>