force-app/main/default/objects/smartystreets__SmartyStreets_Helper__c/fields/smartystreets__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>