force-app/main/default/objects/smartystreets__SmartyStreets_Helper__c/fields/smartystreets__Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Job_Summary__c</fullName>
    <label>Job Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>